타이틀수정

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="3.html">관리자기능</a></li>
     </ol>
 
-    <h2>메인페이지</h2>
+    <h2>메인페이지1</h2>
 
     <img src="coding.jpg" width="100%">
     <h1>This is heading 1</h1>
