2.html에 미디어쿼리 적용

--- a/2.html
+++ b/2.html
@@ -28,11 +28,22 @@
             display: grid;
             grid-template-columns: 150px 1fr;
         }
-        ol {
+        #grid ol {
             padding-left: 33px;
         }
-        #article {
+        #grid #article {
             padding-left: 25px;
+        }
+        @media(max-width:800px) {
+            #grid{
+            display:block;
+            }
+            ol {
+            border-right: none;
+            }
+            h1 {
+            border-bottom: none;
+            }     
         }
     </style>
 </head>
