--- a/flex.html
+++ b/flex.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>>
+    <head>
         <style>
             .container {
                 display: flex;
+                width: 1200px;
+                background-color: aquamarine;
             }
+            .header {
+                height: 150px;
+                background-color: blue;
+            }
+            .sidebar {
+                width: 250px;
+                background-color: blueviolet;
+            }
+            .content {}
+            .footer {}
 
         </style>
     </head>
